# quake_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  rust_build.yml  rust_build_test.yml
docs/: class-diagram.mermaid  sequence-diagram.mermaid  system_design.md
src/: api.rs  cli.rs  client.rs  display.rs  gpt.rs  main.rs  models.rs  persistence.rs
